--- a/styles/album.css
+++ b/styles/album.css
@@ -4,28 +4,28 @@
    margin-top: 1rem;
    width: 60%;
  }
- 
+
  .album-view-details {
    position: relative;
    top: 1.5rem;
    padding: 1rem;
  }
- 
+
  .album-view-details .album-view-title {
    font-weight: 300;
    font-size: 2rem;
  }
- 
+
  .album-view-details .album-view-artist {
    font-weight: 300;
    font-size: 1.5rem;
  }
- 
+
  .album-view-details .album-view-release-info {
    font-weight: 300;
    font-size: 0.75rem;
  }
- 
+
  .album-view-song-list {
    width: 90%;
    margin: 1.5rem auto;
@@ -33,25 +33,25 @@
    font-size: 0.75em;
    border-collapse: collapse;
  }
- 
+
  .album-view-song-item {
    height: 3rem;
    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
  }
- 
+
  .song-item-number {
    width: 5%;
    min-width: 30px;
  }
- 
+
  .song-item-title {
-   width: 85%;
+   width: 75%;
  }
- 
+
  .song-item-duration {
    width: 5%;
  }
- 
+
  .album-song-button {
    text-align: center;
    font-size: 14px;
@@ -62,17 +62,26 @@
    width: 28px;
    height: 28px;
  }
- 
+
+ .ion-ios-star-outline {
+  display: inline;
+ }
+
+ .ion-ios-star {
+  display: inline;
+ }
+
+
  .album-song-button:hover {
    cursor: pointer;
    color: white;
    background-color: rgb(210, 40, 123);
  }
- 
+
  .album-song-button span {
    line-height: 28px;
  }
- 
+
  @media (max-width: 640px) and (min-width: 320px) {
    .album-view-details {
      text-align: center;
@@ -81,7 +90,7 @@
      margin-top: 0;
    }
  }
- 
+
  @media (max-width: 1024px) and (min-width: 320px) {
    .album-view-song-list {
      position: relative;
