--- a/templates/album.html
+++ b/templates/album.html
@@ -5,7 +5,23 @@
 		</div>
 		<div class="album-view-details column half">
 			<h2 class="album-view-title">{{album.albumData.title}}</h2>
+				<div ng-init="albumCount=0">
+			  <span class="ion-ios-star" ng-show="albumCount >= 1" ng-click= "albumCount = albumCount - 1"></span>
+				<span class="ion-ios-star" ng-show="albumCount >= 2" ng-click= "albumCount = albumCount - 1"></span>
+				<span class="ion-ios-star" ng-show="albumCount >= 3" ng-click= "albumCount = 0"></span>
+				<span class="ion-ios-star-outline" ng-show="albumCount == 0" ng-click= "albumCount = albumCount + 1"></span>
+				<span class="ion-ios-star-outline" ng-show="albumCount < 2" ng-click= "albumCount = albumCount + 1"></span>
+				<span class="ion-ios-star-outline" ng-show="albumCount < 3" ng-click= "albumCount = albumCount + 1"></span>
+			</div>
 			<h3 class="album-view-artist">{{album.albumData.artist}}</h3>
+			<div ng-init="artistCount=0">
+			<span class="ion-ios-star" ng-show="artistCount >= 1" ng-click= "artistCount = artistCount - 1"></span>
+			<span class="ion-ios-star" ng-show="artistCount >= 2" ng-click= "artistCount = artistCount - 1"></span>
+			<span class="ion-ios-star" ng-show="artistCount >= 3" ng-click= "artistCount = 0"></span>
+			<span class="ion-ios-star-outline" ng-show="artistCount == 0" ng-click= "artistCount = artistCount + 1"></span>
+			<span class="ion-ios-star-outline" ng-show="artistCount < 2" ng-click= "artistCount = artistCount + 1"></span>
+			<span class="ion-ios-star-outline" ng-show="artistCount < 3" ng-click= "artistCount = artistCount + 1"></span>
+		</div>
 			<h5 class="album-view-release-info">{{album.albumData.label}} {{album.albumData.year}}</h5>
 		</div>
 	</section>
@@ -17,6 +33,14 @@
 				<a class="album-song-button" ng-show="song.playing" ng-click="album.songPlayer.pause(song)"><span class="ion-pause"></span></a>
 			</td>
 			<td class="song-item-title">{{song.title}}</td>
+			<div ng-init="count=0">
+			<td class="ion-ios-star" ng-show="count >= 1" ng-click= "count = count - 1"></td>
+			<td class="ion-ios-star" ng-show="count >= 2" ng-click= "count = count - 1"></td>
+			<td class="ion-ios-star" ng-show="count >= 3" ng-click= "count = 0"></td>
+			<td class="ion-ios-star-outline" ng-show="count == 0" ng-click= "count = count + 1"></td>
+			<td class="ion-ios-star-outline" ng-show="count < 2" ng-click= "count = count + 1"></td>
+			<td class="ion-ios-star-outline" ng-show="count < 3" ng-click= "count = count + 1"></td>
+		</div>
 			<td class="song-item-duration">{{song.duration | timecode}}</td>
 		</tr>
 	</table>
