--- a/templates/player_bar.html
+++ b/templates/player_bar.html
@@ -25,7 +25,8 @@
       </div>
     </div>
     <div class="control-group volume">
-      <span class="icon ion-volume-high"></span>
+      <span class="icon ion-volume-high" ng-hide="playerBar.songPlayer.currentVolume == 0" ng-click="playerBar.songPlayer.mute()"></span>
+      <span class="icon ion-volume-mute" ng-hide="playerBar.songPlayer.currentVolume > 0" ng-click="playerBar.songPlayer.unmute()"></span>
       <seek-bar value="{{ playerBar.songPlayer.currentVolume }}" max="{{ playerBar.songPlayer.maxVolume }}" on-change="playerBar.songPlayer.setVolume(value)"></seek-bar>
     </div>
   </div>
