--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,3 +1,11 @@
-<div class ="main view" ng-repeat="room in landing.rooms">
-  <h2>{{ room }}</h2>
-</div>
+<section>
+  <div class="wrapper">
+  </div>
+  <h1>Bloc Chat</h1>
+  <div class="main-view" ng-repeat="room in landing.rooms">
+    <h2 class="roomName">{{ room.$value }}</h2>
+    <br>
+  </div>
+
+  <button class="modal" ng-click="landing.open()">Create Room</button>
+</section>
