--- a/templates/landing.html
+++ b/templates/landing.html
@@ -3,7 +3,7 @@
   </div>
   <h1>Bloc Chat</h1>
   <div class="main-view" ng-repeat="room in landing.rooms">
-    <h2 class="roomName">{{ room.$value }}</h2>
+    <h2 class="roomName">{{ room.name }}</h2>
     <br>
   </div>
 
