--- a/styles/main.css
+++ b/styles/main.css
@@ -8,7 +8,7 @@ html {
   width: 100%;
 }
 
-.wrapper {
+.sidebar {
   width: 20%;
   background-color: #006666;
   color: white;
@@ -19,22 +19,23 @@ html {
   left: 0;
   overflow-x: hidden;
   transition: 0.5s;
-  padding-top: 60px;
 }
 
-h1 {
+.sidebar-header {
   position: fixed;
   z-index: 0;
   color: white;
 }
 
-.main-view {
-  width: 25%;
-  height: 100%;
+.sidebar-nav {
+  top: 75px;
+  right: 15px;
   z-index: 3;
   position: relative;
   color: white;
-  top: 150px;
+  font-size: 75%;
+  text-align: right;
+
 }
 
 .roomName {
@@ -50,6 +51,35 @@ h1 {
   background-color: #009999;
   color: white;
   bottom: -150px;
+}
+
+.chatroom {
+  width: 80%;
+  float: right;
+  text-align: left;
+  color: #4c4949;
+  position: relative;
+  z-index: 6;
+}
+
+.chatroom-name {
+  color: #009999;
+}
+
+p {
+  top: -20px;
+  padding: 5px;
+  display: inline;
+}
+
+.chatroom-username {
+  color: #009999;
+}
+
+.chatroom-time {
+  font-style: italic;
+  text-align: right;
+  font-size: 45%;
 }
 
 @media (min-width: 640px) {
