--- a/templates/modal.html
+++ b/templates/modal.html
@@ -1,4 +1,4 @@
-<div class="modal-container">
+<section class="modal-container">
     <div class="modal-header">
         <h3 class="modal-body text-center">Create new room</h3>
     </div>
@@ -12,4 +12,4 @@
         <button class="button create" type="button" ng-click="modal.create(name)">Create Room</button>
         <button class="button cancel" type="button" ng-click="$dismiss()">Cancel</button>
     </div>
-</div>
+</section>
