--- a/templates/modal.html
+++ b/templates/modal.html
@@ -1,15 +1,15 @@
-<section class="modal-container">
-    <div class="modal-header">
-        <h3 class="modal-body text-center">Create new room</h3>
-    </div>
-    <div class="modal-body">
-        <div class="form-group modal-input">
-            <label for="newRoomName">Enter a room name</label>
-            <input id="newRoomName" type="text" ng-model="name">
+  <div class="newRoom row modal-dialog modal-content">
+      <div class="room-header modal-header">
+        <h3 class="room-body text-center">Create new room</h3>
+      </div>
+      <div class="room-body modal-body">
+        <div class="form-group room-input">
+          <label for="newRoomName">Enter a room name</label>
+          <input id="newRoomName" type="text" ng-model="name">
         </div>
-    </div>
-    <div class="modal-footer">
-        <button class="button create" type="button" ng-click="modal.create(name)">Create Room</button>
-        <button class="button cancel" type="button" ng-click="$dismiss()">Cancel</button>
-    </div>
-</section>
+      </div>
+      <div class="room-footer modal-footer">
+        <button class="btn room-create" type="button" ng-click="modal.create(name)">Create Room</button>
+        <button class="btn room-cancel" type="button" ng-click="$dismiss()">Cancel</button>
+      </div>
+  </div>
