--- a/templates/modal.html
+++ b/templates/modal.html
@@ -1,4 +1,4 @@
-  <div class="newRoom row modal-dialog modal-content">
+  <div class="newRoom row modal-dialog">
       <div class="room-header modal-header">
         <h3 class="room-body text-center">Create new room</h3>
       </div>
@@ -9,7 +9,7 @@
         </div>
       </div>
       <div class="room-footer modal-footer">
-        <button class="btn room-create" type="button" ng-click="modal.create(name)">Create Room</button>
         <button class="btn room-cancel" type="button" ng-click="$dismiss()">Cancel</button>
+        <button class="btn room-create" type="button" ng-click="modal.create(name)">Create Room</button>
       </div>
   </div>
