--- a/styles/main.css
+++ b/styles/main.css
@@ -27,9 +27,11 @@ html, body, .container-fluid, .sidebar-container {
 .roomName {
   font-size: 150%;
   text-align: center;
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
 
-.btn {
+.button-send {
   background-color: #009999;
   color: white;
 }
@@ -37,6 +39,8 @@ html, body, .container-fluid, .sidebar-container {
 .create-room {
   float: left;
   margin-top: 35px;
+  background-color: #74a5a5;
+  color: white;
 }
 
 .glyphicon {
