--- a/templates/landing.html
+++ b/templates/landing.html
@@ -5,9 +5,7 @@
       <div class="sidebar-nav" ng-repeat="room in landing.rooms">
         <h2 class="roomName" ng-click="landing.selectedRoom(room)">{{ room.name }}</h2>
       </div>
-      <button class="create-room btn" ng-click="landing.open()">
-        <span class="glyphicon glyphicon-plus-sign"></span>Create Room
-      </button>
+      <button class="create-room btn" ng-click="landing.open()">Create Room</button>
     </div>
     <div class="chatroom col-sm-10" ng-show="landing.currentRoom !== null">
       <h3 class="chatroom-header">{{landing.currentRoom.name}}</h3>
