--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -1,21 +1,28 @@
- <section class="hero-content">
-     <h1 class="hero-title">{{ landing.heroTitle }}</h1>
- </section>
- 
- <section class="selling-points container clearfix">
-     <div class="point column third">
-         <span class="ion-music-note"></span>
-         <h5 class="point-title">Choose your music</h5>
-         <p class="point-description">The world is full of music; why should you have to listen to music that someone else chose?</p>
-     </div>
-     <div class="point column third">
-         <span class="ion-radio-waves"></span>
-         <h5 class="point-title">Unlimited, streaming, ad-free</h5>
-         <p class="point-description">No arbitrary limits. No distractions.</p>
-     </div>
-     <div class="point column third">
-         <span class="ion-iphone"></span>
-         <h5 class="point-title">Mobile enabled</h5>
-         <p class="point-description">Listen to your music on the go. This streaming service is available on all mobile platforms.</p>
-     </div>
- </section>
+<div class="container-fluid">
+  <div class="sidebar-container row">
+    <div class="sidebar col-sm-2">
+      <h1 class="sidebar-header">Bloc Chat</h1>
+      <div class="sidebar-nav" ng-repeat="room in landing.rooms">
+        <h2 class="roomName" ng-click="landing.selectedRoom(room)">{{ room.name }}</h2>
+      </div>
+      <button class="create-room btn" ng-click="landing.open()">Create Room</button>
+    </div>
+    <div class="chatroom col-sm-10" ng-show="landing.currentRoom !== null">
+      <h3 class="chatroom-header">{{landing.currentRoom.name}}</h3>
+        <table class="chatroom-messages table table-striped" ng-repeat="message in landing.currentRoomMessages">
+          <tbody>
+          <tr>
+          <td class="chatroom-username">{{message.username}}:</td>
+          <td class="chatroom-content">{{message.content }}</td>
+          <td class="chatroom-time"><sub>{{message.sentAt | date: "shortTime" }}</sub></td>
+        </tr>
+      </tbody>
+      </table>
+      <div class="chatroom-send input-group">
+        <textarea class="form-control" placeholder="Send message ..." name="entryfield" rows="1" cols="100" ng-model="text"> </textarea>
+        <span class="input-group-btn">
+          <button class="button-send btn btn-default" type="button" ng-click="landing.sendMessage(text); entryfield.$setPristine() ;  text = ' ' ">Send</button>
+      </span>
+      </div>
+    </div>
+  </div>
