--- a/styles/main.css
+++ b/styles/main.css
@@ -37,8 +37,7 @@ html, body, .container-fluid, .sidebar-container {
 }
 
 .create-room {
-  float: left;
-  margin-top: 35px;
+  margin: auto;
   background-color: #74a5a5;
   color: white;
 }
