--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -3,20 +3,20 @@
     <div class="sidebar col-sm-2">
       <h1 class="sidebar-header">Bloc Chat</h1>
       <div class="sidebar-nav" ng-repeat="room in landing.rooms">
-        <h2 class="roomName" ng-click="landing.selectedRoom(room)">{{ room.name }}</h2>
+        <h2 class="roomName" ng-show="room.userList === false || room.userList.findIndex(landing.currentUser) > -1" ng-click="landing.selectedRoom(room)">{{ room.name }}</h2>
       </div>
       <button class="create-room btn" ng-click="landing.open()">Create Room</button>
     </div>
     <div class="chatroom col-sm-10" ng-show="landing.currentRoom !== null">
       <h3 class="chatroom-header">{{landing.currentRoom.name}}</h3>
-        <table class="chatroom-messages table table-striped" ng-repeat="message in landing.currentRoomMessages">
-          <tbody>
+      <table class="chatroom-messages table table-striped" ng-repeat="message in landing.currentRoomMessages">
+        <tbody>
           <tr>
-          <td class="chatroom-username">{{message.username}}:</td>
-          <td class="chatroom-content">{{message.content }}</td>
-          <td class="chatroom-time"><sub>{{message.sentAt | date: "shortTime" }}</sub></td>
-        </tr>
-      </tbody>
+            <td class="chatroom-username">{{message.username}}:</td>
+            <td class="chatroom-content">{{message.content }}</td>
+            <td class="chatroom-time"><sub>{{message.sentAt | date: "shortTime" }}</sub></td>
+          </tr>
+        </tbody>
       </table>
       <div class="chatroom-send input-group">
         <textarea class="form-control" placeholder="Send message ..." name="entryfield" rows="1" cols="100" ng-model="text"> </textarea>
