--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,15 +1,42 @@
-<div class="newUser modal-dialog">
+<div class="loginUser modal-dialog" ng-hide="registerNew">
+  <div class="user-header modal-header">
+    <h3 class="user-body text-center">Login to Account</h3>
+  </div>
+  <div class="user-body modal-body">
+    <div class="form-group modal-input">
+      <label for="loginName">Enter your user name</label>
+      <input id="loginName" type="text" ng-model="name">
+      <label for="loginEmail">Enter your email</label>
+      <input id="loginEmail" type="email" ng-model="email">
+      <label for="loginPassword">Enter your password</label>
+      <input id="loginPassword" type="password" ng-model="password">
+    </div>
+  </div>
+  <div class="user-footer modal-footer">
+
+    <button class="user-login btn" type="button" ng-click="login(name, email, password)">Login</button>
+  </div>
+</div>
+
+<div class="newUser modal-dialog" ng-show="registerNew">
   <div class="user-header modal-header">
     <h3 class="user-body text-center">Create new user</h3>
   </div>
   <div class="user-body modal-body">
     <div class="form-group modal-input">
       <label for="newUserName">Enter a user name</label>
-      <input id="newUserName" type="text" ng-model="name">
-      <p class="user-error" ng-show="name.length < 4">Please enter a name longer than 4 characters</p>
+      <input id="newUserName" type="text" ng-model="newName">
+      <label for="newEmail">Enter an email</label>
+      <input id="newEmail" type="email" ng-model="newEmail">
+      <label for="newPassword">Enter a password</label>
+      <input id="newPassword" type="password" ng-model="newPassword">
+      <label for="newConfirm">Confirm password</label>
+      <input id="newConfirm" type="password" ng-model="confirm">
+      <p class="user-error" ng-show="newName.length < 4">Please enter a name longer than 4 characters</p>
     </div>
   </div>
   <div class="user-footer modal-footer">
-    <button class="user-create btn" type="button" ng-click="newUser(name)">Submit</button>
+    <button class="user-switch btn" type="button" ng-click="registerNew = false">Login</button>
+    <button class="user-register btn" type="button" ng-click="newUser(newName, newEmail, newPassword, confirm)">Submit</button>
   </div>
 </div>
