Fixing issues caused by merge

--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -13,7 +13,7 @@
     </div>
   </div>
   <div class="user-footer modal-footer">
-
+    <button class="user-create btn" type="button" ng-click="registerNew = true">Register</button>
     <button class="user-login btn" type="button" ng-click="login(name, email, password)">Login</button>
   </div>
 </div>
