--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -3,7 +3,7 @@
     <div class="sidebar col-sm-2">
       <h1 class="sidebar-header">Bloc Chat</h1>
       <div class="sidebar-nav" ng-repeat="room in landing.rooms">
-        <h2 class="roomName" ng-show="room.userList === false || room.userList.findIndex(landing.currentUser) > -1" ng-click="landing.selectedRoom(room)">{{ room.name }}</h2>
+        <h2 class="roomName" ng-show="room.userList === false || room.userList.indexOf(landing.currentUser) > -1" ng-click="landing.selectedRoom(room)">{{ room.name }}</h2>
       </div>
       <button class="create-room btn" ng-click="landing.open()">Create Room</button>
     </div>
