--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -24,14 +24,14 @@
   </div>
   <div class="user-body modal-body">
     <div class="form-group modal-input">
-      <label for="newUserName">Enter a user name</label>
-      <input id="newUserName" type="text" ng-model="newName">
-      <label for="newEmail">Enter an email</label>
-      <input id="newEmail" type="email" ng-model="newEmail">
-      <label for="newPassword">Enter a password</label>
-      <input id="newPassword" type="password" ng-model="newPassword">
-      <label for="newConfirm">Confirm password</label>
-      <input id="newConfirm" type="password" ng-model="confirm">
+      <label for="newUserName">Enter a user name</label><br>
+      <input id="newUserName" type="text" ng-model="newName"><br>
+      <label for="newEmail">Enter an email</label><br>
+      <input id="newEmail" type="email" ng-model="newEmail"><br>
+      <label for="newPassword">Enter a password</label><br>
+      <input id="newPassword" type="password" ng-model="newPassword"><br>
+      <label for="newConfirm">Confirm password</label><br>
+      <input id="newConfirm" type="password" ng-model="confirm"><br>
       <p class="user-error" ng-show="newName.length < 4">Please enter a name longer than 4 characters</p>
     </div>
   </div>
