--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -24,13 +24,13 @@
   </div>
   <div class="user-body modal-body">
     <div class="form-group modal-input">
-      <label for="newUserName">Enter a user name</label><br>
+      <label for="newUserName">Enter a new user name<br></label>
       <input id="newUserName" type="text" ng-model="newName"><br>
-      <label for="newEmail">Enter an email</label><br>
+      <label for="newEmail">Enter your email for account<br></label>
       <input id="newEmail" type="email" ng-model="newEmail"><br>
-      <label for="newPassword">Enter a password</label><br>
+      <label for="newPassword">Register your password<br></label>
       <input id="newPassword" type="password" ng-model="newPassword"><br>
-      <label for="newConfirm">Confirm password</label><br>
+      <label for="newConfirm">Confirm your password<br></label>
       <input id="newConfirm" type="password" ng-model="confirm"><br>
       <p class="user-error" ng-show="newName.length < 4">Please enter a name longer than 4 characters</p>
     </div>
