--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -6,9 +6,19 @@
 
 html, body, .container-fluid, .sidebar-container {
     height:100%;
+    background-image: url(../assets/room-bg.jpeg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center center;
+    background-size: cover;
 }
 
 .sidebar {
+  background-image: url(../assets/bar-bg.jpeg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center center;
+  background-size: cover;
   background-color: #006666;
   color: white;
   height: 100%;
@@ -18,6 +28,10 @@ html, body, .container-fluid, .sidebar-container {
   font-weight: bold;
   float: right;
   padding: 10px;
+}
+
+.sidebar-header {
+  color: white;
 }
 
 .sidebar-nav {
@@ -47,6 +61,10 @@ html, body, .container-fluid, .sidebar-container {
   padding: 1px;
 }
 
+.tbody {
+  background-color: black;
+}
+
 .chatroom-header {
   color: white;
   background-color: #009999;
@@ -58,6 +76,9 @@ html, body, .container-fluid, .sidebar-container {
   padding: 0px;
   border: 0px;
   margin: 0px;
+  background-color: rgba(0, 153,153, 0.85);
+  color: white;
+  text-align: left;
 }
 
 .chatroom-username {
