--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="sidebar-container row">
     <div class="sidebar col-sm-2">
-      <h1 class="sidebar-header">Bloc Chat</h1>
+      <h1 class="sidebar-header">Sea Chat</h1>
       <div class="sidebar-nav" ng-repeat="room in landing.rooms">
         <h2 class="roomName" ng-show="room.userList === false || room.userList.indexOf(landing.currentUser) > -1" ng-click="landing.selectedRoom(room)">{{ room.name }}</h2>
       </div>
@@ -9,7 +9,7 @@
     </div>
     <div class="chatroom col-sm-10" ng-show="landing.currentRoom !== null">
       <h3 class="chatroom-header">{{landing.currentRoom.name}}</h3>
-      <table class="chatroom-messages table table-striped" ng-repeat="message in landing.currentRoomMessages">
+      <table class="chatroom-messages table" ng-repeat="message in landing.currentRoomMessages">
         <tbody>
           <tr>
             <td class="chatroom-username">{{message.username}}:</td>
